--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -696,7 +696,7 @@
    "source": [
     "Based on the data we collected, we decided that the best place to live is **Northview Heights** (census tract number 2609). People in Northview Heights take the least amount of medication for depression and anxiety, and they also are the population with the least amount of cases of diabetes. \n",
     "\n",
-    "We thought that the best neighborhood would be Northview Heights, but the results ended up showing that the neighborhood is actually not very safe and has a high poverty level. However, there are some good public schools that serve Northview Heights. This shows that the metrics we chose aren't good indicators for whether a community is good to live in. If we had looked at crime or drug abuse, Northview Heights would've gotten a much lower ranking. \n",
+    "We thought that the best neighborhood would be Northview Heights, but the results ended up showing that the neighborhood is actually not very safe and has a high poverty level. Since residents of Northview Heights do not have a lot of money, they cannot buy medications or afford health insurance. This is a probable cause for why there is a lower percentage for medications taken. However, there are some good public schools that serve Northview Heights. This shows that the metrics we chose aren't good indicators for whether a community is good to live in. If we had looked at crime or drug abuse, Northview Heights would've gotten a much lower ranking. \n",
     "\n",
     "Obviously, we think Oakland is the best place in Pittsburgh (Go Pitt!). Oakland (Census Tract 406) was ranked 55th on our list."
    ]
