--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -698,7 +698,7 @@
     "\n",
     "We thought that the best neighborhood would be Northview Heights, but the results ended up showing that the neighborhood is actually not very safe and has a high poverty level. Since residents of Northview Heights do not have a lot of money, they may not be able to buy medications or afford health insurance. This is a possible cause for why there are lower percentages for medications taken for depression, anxiety, and diabetes. However, there are some good public schools that serve Northview Heights. This shows that the metrics we chose aren't good indicators for whether a community is good to live in. If we had looked at crime or drug abuse, Northview Heights would've gotten a much lower ranking. \n",
     "\n",
-    "Obviously, we think Oakland is the best place in Pittsburgh (Go Pitt!). Oakland (Census Tract 406) was ranked 55th on our list."
+    "Obviously, we think Oakland is the best place in Pittsburgh (Hail to Pitt!). Oakland (Census Tract 406) was ranked 55th on our list."
    ]
   },
   {
